2005-09-29  Akkana Peck  <akkana@cvs.gnome.org>

	* plug-ins/common/zealouscrop.c
	Update every 20 steps, instead of 19 out of every 20.

2005-09-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-console.c
	(script_fu_browse_callback): don't set the procedure browser
	transient to the script-fu console.

2005-09-28  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpprogressbox.c
	* plug-ins/script-fu/script-fu-interface.c: made progress bars HIG
	compliant (with italic label below).

	* app/widgets/gimpfiledialog.[ch]: use a GimpProgressBox intead of
	implementing the progress bar again.

2005-09-28  Michael Natterer  <mitch@gimp.org>

	* app/actions/dialogs-actions.c (dialogs_dockable_actions): fixed
	action parameter to match both the palette list and grid.
	Fixes bug #317435.

2005-09-28  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpscanner.c (gimp_scanner_new_file): mmap the
	config file using GMappedFile. Let's see how well this works...

2005-08-28  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/chrome-it.scm: Removed extraneous -
	in register block left when script was renamed.

	* plug-ins/script-fu/scripts/text-circle.scm: Fixed minor errors
	in comments.

2005-09-28  Tor Lillqvist  <tml@novell.com>

	* libgimp/gimp.def: Fix typo.

2005-09-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gqbist.c: use a single random number generator
	for the lifetime of the plug-in. Fixes bug #317355.

2005-09-28  Sven Neumann  <sven@gimp.org>

	* docs/Makefile.am
	* docs/keybindings.txt
	* docs/quick_reference.ps
	* docs/quick_reference.tar.gz: removed outdated documentation that
	is now being maintained in the user manual (bug #316423).

2005-09-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c
	(gimp_scrolled_preview_nav_popup_expose): draw the rectangle
	according to the scrollbar adjustments.

2005-09-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.[ch]