@@ -1,6 +1,11 @@
+2005-09-29  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/script-fu-interface.c: removed the frame
+	around the progress bar.
+
 2005-09-29  Akkana Peck  <akkana@cvs.gnome.org>
 
-	* plug-ins/common/zealouscrop.c
+	* plug-ins/common/zealouscrop.c:
 	Update every 20 steps, instead of 19 out of every 20.
 
 2005-09-29  Sven Neumann  <sven@gimp.org>
